# CppStarter

./: CMakeLists.txt  CmakeLists.txt  Doxyfile.in  README.md  kikplate.yaml
.github/ISSUE_TEMPLATE/: cpp_starter.md
all/: CMakeLists.txt
app/: main.cpp
cmake/: CodeCoverage.cmake  Misc.cmake
include/: Foo.h
src/: Foo.cpp
tests/: CMakeLists.txt  foo.cpp
